<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/LayoutStartStyle"
    tools:context="musicapp.views.AboutUs">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="80dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView25"
            style="@style/TitlesStyle"
            android:layout_gravity="center"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Version"
            android:id="@+id/textView26"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/imageView"
            android:src="@drawable/musicapp"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:id="@+id/textView27"
            android:layout_gravity="center"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/License"
            android:id="@+id/textView28"
            style="@style/TitlesStyle"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="@string/On_Click" />
    </LinearLayout>
</LinearLayout>
